# mdtalk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVLOG.md  LICENSE  README.md  build.rs  mdtalk.toml  review_changelog.md
src/: agent.rs  config.rs  consensus.rs  conversation.rs  main.rs  orchestrator.rs  test_utils.rs
src/dashboard/: app.rs  events.rs  mod.rs  ui.rs
